tests/ui/issues/issue-37311-type-length-limit/issue-37311.stderr
error: reached the type-length limit while instantiating `<(&(&(..., ...), ...), ...) as Foo>::recurse`
  --> $DIR/issue-37311.rs:17:9
   |
LL |         (self, self).recurse();
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding a `#![type_length_limit="33554429"]` attribute to your crate
   = note: the full type name has been written to '$TEST_BUILD_DIR/issues/issue-37311-type-length-limit/issue-37311/issue-37311.long-type.txt'

error: aborting due to 1 previous error

